ingress/checkout-dev/CiCd-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: CiCd-ingress
  namespace: checkout-dev-CiCd
spec:
  rules:
    - host: CiCd.petclinic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-petclinic-api-gateway
                port:
                  number: 8080
