ingress/checkout-dev/cicd-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  namespace: checkout-dev-cicd
spec:
  rules:
    - host: cicd.petclinic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-petclinic-visits-service
                port:
                  number: 8082
