ingress/checkout-dev/main-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: checkout-dev-main
spec:
  rules:
    - host: main.petclinic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-petclinic-visits-service
                port:
                  number: 8082
