ingress/checkout-dev/null-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: null-ingress
  namespace: checkout-dev-null
spec:
  rules:
    - host: null.petclinic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: null
                port:
                  number: null
